# CS6378P2

./: CMakeLists.txt  Makefile  Readme.md  algorithm.cpp  dsstructs.h  io  io.cpp  io.h  main.cpp  my_program  serialization.cpp  serialization.h  tobc.cpp  totalorder
Launcher/: cleanup.sh  config0.txt  config1.txt  config2.txt  config3.txt  config4.txt  config5.txt  freeports.py  launcher.sh
Tests/: serdes.cpp
include/: algorithm.h  dsstructs.h  io.h  lib.h  serialization.h
src/: algorithm.cpp  io.cpp  serialization.cpp
tests/: main.cpp
